# Hackathon_Two_Phase_II

./: .env.example  .gitignore  CLAUDE.md
.claude/agents/: auth.md  backend.md  database.md  frontend.md  testing.md
.claude/skills/auth/: SKILL.md  auth-SKILL.md
.specify/memory/: constitution.md
.specify/plans/: data-model-backend-api.md  data-model-foundation.md  plan-backend-api.md  plan-foundation.md  plan-frontend.md  plan-testing.md  quickstart-backend-api.md  quickstart-foundation.md  research-backend-api.md  research-foundation.md  tasks-backend-api.md  tasks-foundation.md  tasks-frontend.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: task.py
backend/app/routes/: tasks.py
backend/app/services/: task_service.py
backend/tests/: conftest.py  test_auth.py  test_service.py  test_tasks.py
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/app/: not-found.tsx  page.tsx
frontend/components/: LoginForm.tsx  Navbar.tsx  SignupForm.tsx  TaskFilter.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/hooks/: useAuth.ts
frontend/lib/: api.ts  auth-client.ts  auth.ts
frontend/types/: task.ts
specs/001-system-architecture/: spec.md
specs/002-database-schema/: spec.md
specs/003-auth-system/: spec.md
specs/004-rest-api-endpoints/: spec.md
specs/005-task-crud-features/: spec.md
specs/006-frontend-pages/: spec.md
specs/007-frontend-components/: spec.md
specs/008-testing-strategy/: spec.md  tasks.md
(+45 files in other folders)
